# rsl

./: CMakeLists.txt  LICENSE
docs/: .gitignore  Makefile  antora.yml  mrdocs.yml  postprocess.py
docs/api/: meta
docs/api/rsl/: enum.h  format.h  macro.h  meta.h  meta_traits.h  print.h  source_location.h  string_util  variant.h
docs/api/rsl/_impl/: member_cache.hpp
docs/modules/ROOT/pages/: brief.adoc  index.adoc
docs/modules/annotation/pages/: index.adoc
docs/modules/api/: README.md  nav.adoc
docs/modules/api/pages/: index.adoc  operator_and_eq-04.adoc  operator_and_eq-0f1.adoc  operator_and_eq-0f2.adoc  operator_and_eq-0fa.adoc  operator_bitand-061.adoc  operator_bitand-064.adoc  operator_bitand-08.adoc  operator_bitand-0d.adoc  operator_bitnot.adoc  operator_bitor-02.adoc  operator_bitor-08.adoc  operator_bitor-0b.adoc  operator_bitor-0e.adoc  operator_eq-01.adoc  operator_eq-0b.adoc  operator_eq-0e.adoc  operator_not_eq-05.adoc  operator_not_eq-06.adoc  operator_not_eq-0c.adoc  operator_or_eq-01.adoc  operator_or_eq-03.adoc  operator_or_eq-05.adoc  operator_or_eq-0c.adoc  operator_xor-00.adoc  operator_xor-02.adoc  operator_xor-0b.adoc  operator_xor-0c.adoc  operator_xor_eq-039.adoc  operator_xor_eq-03b.adoc  operator_xor_eq-09.adoc  operator_xor_eq-0d.adoc  reference.tag.xml  rsl.adoc
docs/modules/api/pages/headers/rsl/: enum.adoc  format.adoc  meta.adoc  meta_traits.adoc  print.adoc  source_location.adoc
docs/modules/api/pages/rsl/: FlagEnumTag.adoc  complete_type.adoc  current_class.adoc  current_function.adoc  current_namespace.adoc  current_scope.adoc  flag_enum.adoc  format.adoc  format_result.adoc  format_string.adoc  has_fixed_underlying_type.adoc  has_flag-01.adoc  has_flag-04.adoc  has_flag-09.adoc  has_flag.adoc  in_enum.adoc  in_range-02.adoc  in_range-03.adoc  in_range-0e.adoc  in_range.adoc  incomplete_type.adoc  is_fixed_enum.adoc  is_flag_enum.adoc  isatty.adoc  meta.adoc  numeric_limits-04.adoc  numeric_limits-06.adoc  println.adoc  source_location.adoc  specializes.adoc
docs/modules/api/pages/rsl/meta/: annotated_with.adoc  complete_type.adoc  function.adoc  get_annotation.adoc  get_annotations.adoc  get_member_by_name.adoc  has_annotation-01.adoc  has_annotation-04.adoc  has_annotation-0b.adoc  has_annotation-0c.adoc  has_parent.adoc  incomplete_type.adoc  inject_aggregate.adoc  is_function.adoc  is_member_function.adoc  is_nonstatic_member_function.adoc  is_specialization.adoc  is_static_member_function.adoc  member_function.adoc  nonstatic_member_function.adoc  specializes.adoc  static_member_function.adoc
docs/modules/api/pages/rsl/numeric_limits-04/: denorm_min.adoc  digits.adoc  digits10.adoc  epsilon.adoc  has_denorm.adoc  has_denorm_loss.adoc  has_infinity.adoc  infinity.adoc  (+25 more)
docs/modules/collections/: nav.adoc
docs/modules/collections/pages/: index.adoc
docs/modules/platform/pages/: index.adoc
docs/modules/serialization/: nav.adoc
docs/modules/serialization/pages/: customization.adoc  index.adoc
docs/modules/utilities/: nav.adoc
docs/modules/utilities/pages/: index.adoc
include/rsl/: assert  format  meta  source_location  tuple
include/rsl/_impl/format/: fmt_parser.hpp
include/rsl/_impl/platform/: io.hpp
scripts/: construct_single_header.py
standalone/rsl/: annotations  assert  constant_sequence  constant_wrapper  enum  expect  format  kwargs  macro  meta  meta_traits  print  repr  serialize  source_location  span  string_constant  string_view  trie  tuple  variant
test/: CMakeLists.txt
test/common/: types.h
test/tuple/: CMakeLists.txt  constructor.cpp
(+10 files in other folders)
